# wordcountz

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wordcountz/: __init__.py  __main__.py  controller.py  count.py  counter.py  model.py  plot.py  plotter.py  view.py  wordcountz.py
temp/: einstein.txt  jeffrey_epstein.txt  str1.txt
tests/: test_wordcountz.py
